<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/searchbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/search_bar_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="@dimen/search_bar_height" />

                    <TextView
                        android:id="@+id/date_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_16"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/search_bar_guideline"
                        android:text="@string/right_now"
                        style="@style/TextAppearance.MaterialComponents.Headline5" />

                    <TextView
                        android:id="@+id/weather_conditions_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/date_time_text_view"
                        app:layout_constraintTop_toBottomOf="@id/date_time_text_view"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        tools:text="Light showers with chance of meatballs" />

                    <ImageView
                        android:id="@+id/icon_image_view"
                        android:layout_width="@dimen/weather_icon"
                        android:layout_height="@dimen/weather_icon"
                        android:layout_marginTop="@dimen/spacing_16"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/weather_conditions_text_view"
                        tools:background="@android:color/holo_blue_bright" />

                    <TextView
                        android:id="@+id/current_temp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/icon_image_view"
                        app:layout_constraintTop_toTopOf="@id/icon_image_view"
                        app:layout_constraintBottom_toBottomOf="@id/icon_image_view"
                        android:textStyle="bold"
                        style="@style/TextAppearance.MaterialComponents.Headline2"
                        tools:text="55°" />

                    <TextView
                        android:id="@+id/feels_list_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/current_temp_text_view"
                        app:layout_constraintStart_toStartOf="@id/current_temp_text_view"
                        app:layout_constraintEnd_toEndOf="@id/current_temp_text_view"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        tools:text="Feels like 55°F" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <include
                    layout="@layout/view_current_conditions"
                    android:id="@+id/include_current_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/feels_list_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginVertical="@dimen/spacing_32" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SectionTitle"
                    android:text="@string/_48_hour_forecast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing_16"
                    tools:listitem="@layout/list_item_forecast" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loading_weather_progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/empty_weather_place_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/mobile_location"
            android:contentDescription="@string/empty_view_content_description"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_32"
            android:layout_marginTop="128dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/empty_message"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <ImageView
            android:layout_width="@dimen/error_image_size"
            android:layout_height="@dimen/error_image_size"
            android:src="@drawable/cloud_crying"
            android:contentDescription="@string/generic_error"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_32"
            android:layout_marginTop="128dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/generic_error"/>

    </FrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchbar_hint" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:voiceIcon="@drawable/wi_raindrop"
        android:hint="@string/searchbar_hint"
        app:layout_anchor="@id/search_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_search_place_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/empty_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/sun" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/empty_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_16"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/empty_hint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/list_item_location_search"
            tools:itemCount="20" />

        <ProgressBar
            android:id="@+id/searching_location_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </com.google.android.material.search.SearchView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
